Prepare for deployment and Favicon
Update README
Add Favicon
Remove unnecessary files from project
Add manifest.json to force mobile to landscape orientation
Change delay time on header h1 animation
Add Frozen Flask
Make changes to names of documents for ease of freezing static version with Frozen Flask for deployment

--- a/templates/chartizard.html
+++ b/templates/chartizard.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CHARTizard</title>
-	<link rel="stylesheet" href="../static/css/style.css">
+	<link rel="icon" href="../static/img/CHARTizardLogo.png" type="image/png">
+	<link rel="stylesheet" href="../static/css/style.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Archivo+Black|Roboto:400,700&display=swap" rel="stylesheet">
+	<link rel="manifest" href="../static/manifest.json">
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src='https://unpkg.com/simple-statistics@7.0.8/dist/simple-statistics.min.js'></script>
 </head>
@@ -39,7 +41,7 @@
 			<p class="footerText">This project was created using D3.JS among other technologies. Thanks for looking.  I hope you had fun!</p>
 			<p class="footerText">Please see README.md file on this project's GitHub page to see a full list of sources used in developing this project: <a class="footerA" target="_blank" href="https://github.com/petefitton/CHARTizard">GitHub Repo</a></p>
 			<div class="footerImgDiv">
-				<img src="../static/img/footerImg.png" class="footerImg">
+				<img src="../static/img/footerImg.png" class="footerImg" alt="Charizard sneering while pointing at a bar chart that shows CHARTizard popularity increasing.">
 			</div>
 		</div>
 	</footer>
