--- a/templates/chartizard.html
+++ b/templates/chartizard.html
@@ -6,7 +6,7 @@
 	<title>CHARTizard</title>
 	<link rel="icon" href="../static/img/CHARTizardLogo.png" type="image/png">
 	<link rel="stylesheet" href="../static/css/style.css" type="text/css">
-	<link href="https://fonts.googleapis.com/css2?family=Archivo+Black|Roboto:400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Domine|Roboto:400,700&display=swap" rel="stylesheet">
 	<link rel="manifest" href="../static/manifest.json">
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src='https://unpkg.com/simple-statistics@7.0.8/dist/simple-statistics.min.js'></script>
