--- a/templates/scatterplotCSV.html
+++ b/templates/scatterplotCSV.html
@@ -384,6 +384,7 @@ d3.csv("{{url_for('static', filename='data/pokemon.csv')}}").then(function(data)
 			.attr('x', width / 2)
 			.attr('y', -20)
 			.style('font-size', "1.5em")
+			.style('font-family', "'Domine', serif")
 			.style('text-anchor', 'middle')
 			.style("opacity", 0)
 		.transition()
