Update controls section of chart page for better mobile experience
Change and add font sizes in em units
Adjust margins as necessary
Change title size of chart
Test landing page button style.css change to have mobile button display better

--- a/templates/scatterplotInitial.html
+++ b/templates/scatterplotInitial.html
@@ -61,29 +61,31 @@ let scatterplotSideBar = d3.select('.scatterDiv').append('div')
 
 d3.select(".scatterplotSideBar").append('p')
     .style("text-align", "center")
-    .style("font-size", "1.7em")
+    .style("font-size", "1.4em")
     .style('font-family', "'Domine', serif")
     .style("border-bottom", "1px solid black")
-    .style("padding-bottom", "5px")
-    .style("margin", "10px auto")
+    .style("padding-bottom", "0.3em")
+    .style("margin", "0.6em auto")
     .text("Controls")
 
 // Variables section
 d3.select(".scatterplotSideBar").append('p')
-    .style("font-size", "1em")
-    .style("margin-left", "5px")
-    .style("margin-top", "15px")
+    .style("font-size", "0.7em")
+    .style("margin-left", "0.3em")
+    .style("margin-top", "0.7em")
+    .style("margin-bottom", "0.7em")
     .text("Variables")
 
 let yDropdownLabel = d3.select('.scatterplotSideBar').append('label')
     .style("margin-left", "20px")
+    .style("font-size", "0.7em")
     .text("Y Variable")
 
 let yDropdown = yDropdownLabel.append('select')
     .attr("class", "yDropdown")
     .style("display", "block")
     .style("margin-left", "20px")
-    .style("margin-bottom", "7px")
+    .style("margin-bottom", "0.5em")
 
 yDropdown.append('option')
     .text("Base Total")
@@ -115,6 +117,7 @@ yDropdown.append('option')
 
 let xDropdownLabel = d3.select('.scatterplotSideBar').append('label')
     .text("X Variable")
+    .style("font-size", "0.7em")
     .style("margin-left", "20px")
 
 let xDropdown = xDropdownLabel.append('select')
@@ -136,20 +139,22 @@ xDropdown.append('option')
 
 // Filters section
 d3.select(".scatterplotSideBar").append('p')
-    .style("font-size", "1em")
-    .style("padding-top", "15px")
-    .style("padding-left", "5px")
+    .style("font-size", "0.7em")
+    .style("padding-top", "0.7em")
+    .style("padding-left", "0.3em")
     .style("border-top", "1px solid black")
+    .style("margin-bottom", "0.7em")
     .text("Filters")
 
 let filterDropdownLabel = d3.select('.scatterplotSideBar').append('label')
     .text("Type Filter")
+    .style("font-size", "0.7em")
     .style("margin-left", "20px")
 
 let filtDropdown = filterDropdownLabel.append('select')
     .attr("class", "filtDropdown")
     .style("display", "block")
-    .style("margin-bottom", "7px")
+    .style("margin-bottom", "0.5em")
     .style("margin-left", "20px")
 
 filtDropdown.append('option')
@@ -230,6 +235,7 @@ filtDropdown.append('option')
 
 let checkboxSingleLabel = d3.select('.scatterplotSideBar').append('label')
     .text("Single-Type")
+    .style("font-size", "0.7em")
     .style("margin-left", "20px")
 
 let checkboxSingleInput = checkboxSingleLabel.append('input')
@@ -237,11 +243,12 @@ let checkboxSingleInput = checkboxSingleLabel.append('input')
     .attr("checked", "checked")
     .attr("value", "dual")
     .style("margin-left", "20px")
-    .style("margin-bottom", "7px")
+    .style("margin-bottom", "0.5em")
     .style("display", "block")
 
 let checkboxDualLabel = d3.select('.scatterplotSideBar').append('label')
     .text("Dual-Type")
+    .style("font-size", "0.7em")
     .style("margin-left", "20px")
 
 let checkboxDualInput = checkboxDualLabel.append('input')
@@ -249,7 +256,7 @@ let checkboxDualInput = checkboxDualLabel.append('input')
     .attr("checked", "checked")
     .attr("value", "dual")
     .style("margin-left", "20px")
-    .style("margin-bottom", "7px")
+    .style("margin-bottom", "0.5em")
     .style("display", "block")
 
 </script>
