--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ html {
 .landingDiv {
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: #464f5d;
 }
 
 .landingContainer {
