Code cleanup and scatterplotCSV.html index update

--- a/templates/scatterplotCSV.html
+++ b/templates/scatterplotCSV.html
@@ -4,8 +4,8 @@
 
 // Variable declarations and processing
 	// Format data
-	// y and x axis variable name declarations
-	// Other variable declarations
+	// y and x axis variable name declarations/initializations
+	// Other variable declarations/initializations
 	// defs/linearGradients/stops for coloring dots
 	// hide/hidehandler
 // Function declarations
@@ -19,20 +19,22 @@
 			// Reset tempData
 			// Filter tempData
 			// Domain setup
+			// Add/Update grid
 			// Regression Line - declarations for vars/functions and creation of line
-			// Add rect for x axis
 			// Call varNameFormat() - define formatted variable names
 			// Call enterDots
-			// Add x and y axes
-			// Add grid
-			// Add x and y axes text
-			// Add scatterTitle and corresponding rect
+			// Add/Update x and y axes
+			// Add/Update x and y axes text
+			// Add/Update scatterTitle
 // Function declarations cont.
-	// varNameFormat declaration with tuple xAxisVarFormatted, yAxisVarFormatted declarations
+	// varNameFormat declaration with triple xAxisVarFormatted, yAxisVarFormatted, filtVarFormatted declarations
+	// computeRegLine declaration
+	// initRegLine declaration
+	// updateRegLine declaration
 	// enterDots declaration
-	// exitDots declaration
+		// handles entrance, update, and exit of Pokemon circles
 // Run initialization/function calls
-	// enterDots()
+	// Call enterDots() once scroll has reached the second page
 
 
 
