Update landing.html grammar

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,7 +10,7 @@
     <div class="landingDiv">
         <form action="{{url_for('chartizard')}}" method="get" class="landingContainer">
             <h1 class="landingText">WARNING</h1>
-            <h2 class="landingText">This website contains may potentially trigger seizure for people with <em>photosensitive epilepsy</em>.</h2>
+            <h2 class="landingText">This website may trigger seizures for people with <em>photosensitive epilepsy</em>.</h2>
             <h2 class="landingText">PEAT software was used to test the site, and the site was shown to be safe; however, please continue at your own discretion.</h2>
             <button class="landingBtn" type="submit">Click Here to Continue</button>
         </form>
